# video_engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GITHUB_RENAME_GUIDE.md  index.html
.cache/blender/: last_render.sha256
.github/workflows/: README_ISSUE_AUTOMATION.md  apple-silicon-test.yml  ci.yml  create-issue-on-failure.yml
benches/: render_benchmark.rs
docs/: cli.md
examples/: texture_test.json
examples/assets/: test.ppm
scripts/: check_test_coverage.sh
src/: assets.rs  audio.rs  config.rs  lib.rs  main.rs  parser.rs  script.rs
src/analysis/: credibility.rs  narrative.rs
src/context/: credibility.rs  narrative.rs  performance.rs
src/renderer/: blender.rs  compositor.rs  encoder.rs  engine.rs  frame_buffer.rs  gpu_context.rs  gpu_renderer.rs  mod.rs  shaders.wgsl  timeline.rs
src/templates/: mod.rs
tests/: cli_tests.rs  test_config.json
