[package]
name = "interstellar-triangulum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
symphonia = { version = "0.5.5", features = ["all"] }
hound = "3.5.1"
wgpu = "27.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
sha2 = "0.10.9"
num_cpus = "1.17.0"

[dev-dependencies]
tempfile = "3"
